# atelier-toolbox

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  convert_pdf_to_docx.sh  convert_scan_pdf_to_selectable_pdf.sh  pyproject.toml  pytest.ini  remove_img_bg.sh  requirements.txt  standard.rc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  deploy.yml  main.yml  requirements.yml  test.yml
src/common/: calendar.py  file.py  output.py  work.py
src/console/: __init__.py  cli.py
src/console/sets/business/: __init__.py  cli.py
src/console/sets/dm/: __init__.py  cli.py  templates.toml
src/console/sets/pdf/: __init__.py  cli.py  converter.py
src/pdf/: __init__.py  cli.py  converter.py
src/toolbox/: __version__.py  cli.py  scripts.py
src/toolbox/common/: calendar.py  exceptions.py  file.py  output.py  work.py
src/toolbox/sets/business/: __init__.py  cli.py
src/toolbox/sets/dw/: __init__.py  cli.py  download.py
src/toolbox/sets/hash/: __init__.py  __version__.py  cli.py  hash_algoritms_enum.py
src/toolbox/sets/pdf/: __init__.py  cli.py  converter.py
tests/: test_business_commands.py  test_calendar.py  test_download.py  test_file.py  test_pdf_commands.py  test_work.py
tests/common/: test_calendar.py  test_file.py  test_work.py
tests/console/: test_business_commands.py  test_pdf_commands.py
