[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "Tools for various automations 🧰"
authors = ["Mihai"]
readme = "README.md"
packages = [{include = "console", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
ocrmypdf = "^14.0.1"
pdf2docx = "^0.5.6"
typer = {extras = ["all"], version = "^0.6.1"}
rich = "^12.6.0"
tqdm = "^4.64.1"
click = "^8.1.3"
pytest = "^7.1.3"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toolbox = "console.cli:main"