[tool.poetry]
name = "atelier-toolbox"
version = "1.0.6"
description = "Tools for various automations 🧰"
authors = ["Mihai"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mihaichris/atelier-toolbox"
keywords = ["toolbox", "automation", "poetry"]
packages = [{ include = "toolbox", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
ocrmypdf = "^14.0.1"
pdf2docx = "^0.5.6"
typer = { extras = ["all"], version = "^0.6.1" }
rich = "^12.6.0"
click = "^8.1.3"
pytest = "^7.2"
tomli = "^2.0.1"
pylint = "^2.15.5"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toolbox = "toolbox.cli:main"
test = "toolbox.scripts:test"
